<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hsr_trajectory_publisher_gui</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kotakkucu@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libqt5-widgets</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
